# space-shooter

./: Cargo.toml  README.md  THIRD_PARTY_LICENSES.html  about.hbs  about.toml  index.html  space_shooter.d.ts  space_shooter.js  space_shooter_bg.wasm.d.ts
.github/workflows/: deploy.yml
src/: main.rs  states.rs
src/collision/: mod.rs  systems.rs
src/enemy/: helpers.rs  mod.rs  systems.rs
src/game/: mod.rs
src/game/background/: helpers.rs  mod.rs  systems.rs
src/game/collision/: mod.rs  systems.rs
src/game/enemy/: helpers.rs  mod.rs  systems.rs
src/game/health/: helpers.rs  mod.rs  systems.rs
src/game/player/: helpers.rs  mod.rs  systems.rs
src/game/projectile/: helpers.rs  mod.rs  systems.rs
src/player/: helpers.rs  mod.rs  systems.rs
src/projectile/: helpers.rs  mod.rs  systems.rs
src/shared/: components.rs  constants.rs  helpers.rs  mod.rs  resources.rs
src/ui/: helpers.rs  mod.rs  systems.rs
src/ui/death_screen/: helpers.rs  mod.rs  systems.rs
src/ui/hud/: helpers.rs  mod.rs  systems.rs
src/ui/main_menu/: helpers.rs  mod.rs  systems.rs
static/: index.html
