[package]
name = "space-shooter"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
rand = "0.10.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
strip = "debuginfo"