[package]
name = "space-shooter"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d", "default_font"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
rand = "0.10.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
strip = "debuginfo"
